--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Fmkli的网站",
+    "name": "Fmkli's website and blog",
     "start_url": "/index.html",
     "display": "standalone",
     "icons": [
